--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
 	"license": "MIT",
 	"author": "Yoriiis aka Joris DANIEL",
 	"scripts": {
+		"test": "jest",
+		"test:watch": "jest --watch --coverage",
 		"test:eslint": "eslint -c ./.eslintrc.js ."
 	},
 	"devDependencies": {
+		"@babel/preset-env": "7.7.6",
 		"babel-eslint": "10.0.3",
+		"babel-plugin-dynamic-import-node": "2.3.0",
 		"eslint": "4.18.2",
 		"eslint-config-standard": "10.2.1",
 		"eslint-plugin-import": "2.8.0",
 		"eslint-plugin-node": "5.2.1",
 		"eslint-plugin-promise": "3.6.0",
 		"eslint-plugin-standard": "3.0.1",
+		"jest": "24.9.0",
 		"prettier-eslint": "9.0.1"
 	},
 	"engines": {
