Add Majestic as npm script Update test of get-css-transition-duration with multiple transitions Update JSDoc

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "utilsjs",
 	"version": "1.0.0",
-	"description": "🛠️ List of standalone Javascript utils functions available in each directory",
+	"description": "🛠️List of standalone Javascript utils functions available in each directory",
 	"homepage": "https://github.com/yoriiis/utilsjs",
 	"bugs": "https://github.com/yoriiis/utilsjs/issues",
 	"repository": "https://github.com/yoriiis/utilsjs.git",
 	"license": "MIT",
 	"author": "Yoriiis aka Joris DANIEL",
 	"scripts": {
+		"majestic": "majestic",
 		"test": "jest",
 		"test:watch": "jest --watch --coverage",
 		"test:eslint": "eslint -c ./.eslintrc.js ."
@@ -23,6 +24,7 @@
 		"eslint-plugin-promise": "3.6.0",
 		"eslint-plugin-standard": "3.0.1",
 		"jest": "24.9.0",
+		"majestic": "1.6.1",
 		"prettier-eslint": "9.0.1"
 	},
 	"engines": {
