Add markdown lint Update docs Remove validateTarget and observer (move to dedicated repo)

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 	"license": "MIT",
 	"author": "Yoriiis aka Joris DANIEL",
 	"scripts": {
-		"majestic": "majestic",
-		"test": "jest",
-		"test:watch": "jest --watch --coverage",
-		"test:eslint": "eslint -c ./.eslintrc.js ."
+		"test": "jest --verbose --coverage",
+		"test:coverage": "jest --coverage",
+		"test:eslint": "eslint -c ./.eslintrc.js .",
+		"test:markdown": "markdownlint '**/*.md' --ignore node_modules",
+		"test:watch": "jest --watch --coverage"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "7.7.7",
@@ -24,7 +25,7 @@
 		"eslint-plugin-promise": "4.2.1",
 		"eslint-plugin-standard": "3.0.1",
 		"jest": "24.9.0",
-		"majestic": "1.6.1",
+		"markdownlint-cli": "0.21.0",
 		"prettier-eslint": "9.0.1"
 	},
 	"engines": {
