--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ os: linux
 
 language: node_js
 
-node_js: "8.11.2"
+node_js:
+  - node # Latest stable Node.js release
+  - lts/* # Latest LTS Node.js release
+  - 12.14.0
+  - 8.11.2
 
 # Safelist
 branches:
@@ -13,10 +17,19 @@ cache:
   npm: true
   pip: true
 
+# Retry install on fail to avoid failing a build on network/disk/external errors
+install:
+  - travis_retry npm install
+
+script:
+  - npm run test:markdown
+  - npm run test:eslint
+
 jobs:
   include:
     - before_script:
         - npm i
       script:
+        - npm run test:markdown
         - npm run test:eslint
         - npm run test
